# blacknode-hardware

./: .gitignore  AGENTS.md  README.md  blacknode-package.toml  check.sh  configure.sh  discover.sh  install-service.sh  pair.sh  probe.sh  pyproject.toml  service.sh  setup_ubuntu.sh  start.sh
blacknode_hardware/: __init__.py  auth.py  contracts.py  device_config.py  joint_group.py  mock.py  node_types.py  safety.py
blacknode_hardware/adapters/: __init__.py  i2c_mecanum.py  serial_joint.py
blacknode_hardware/service/: __init__.py  runtime.py  server.py
profiles/: generic_i2c_mecanum.yaml  generic_joint_group.yaml
scripts/: configure_device.py  hardware_doctor.py  hardware_service.py  i2c_smoke_test.py  pair_device.py  probe.sh  render_systemd_unit.py  serial_probe.py  service_check.py  setup_ubuntu.sh
tests/: test_hardware_contracts.py
